extract verbs and adjectives

--- a/milestone_2.ipynb
+++ b/milestone_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -11,7 +11,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "import spacy"
    ]
   },
   {
@@ -258,6 +259,218 @@
    "source": [
     "## Free memory\n",
     "del names"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "        wiki_id                                     plot_summaries\n7777    7326436  Small-time gangster Ugo Piazza  gets released ...\n14881  14955031  Socialite Molly Lasch is released from prison ...\n31453   1412856  Gino  and Fiore  are Italian racketeers who co...\n10184   3214698  Around the turn of the 20th century, British a...\n28823  12642729  The city girl Kate falls in love with farmer L...\n23572  10566880  The title character is an innocent housekeeper...\n36215  14436640  Crystal Shackelford  lures two strangers, soli...\n40770   7955522  The plot of the special differs significantly ...\n2526   11014002  Plummer plays Fitz Wynn, a truly talented but ...\n25944   4213599  Duke Frederick  has usurped and deposed his ol...",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>wiki_id</th>\n      <th>plot_summaries</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>7777</th>\n      <td>7326436</td>\n      <td>Small-time gangster Ugo Piazza  gets released ...</td>\n    </tr>\n    <tr>\n      <th>14881</th>\n      <td>14955031</td>\n      <td>Socialite Molly Lasch is released from prison ...</td>\n    </tr>\n    <tr>\n      <th>31453</th>\n      <td>1412856</td>\n      <td>Gino  and Fiore  are Italian racketeers who co...</td>\n    </tr>\n    <tr>\n      <th>10184</th>\n      <td>3214698</td>\n      <td>Around the turn of the 20th century, British a...</td>\n    </tr>\n    <tr>\n      <th>28823</th>\n      <td>12642729</td>\n      <td>The city girl Kate falls in love with farmer L...</td>\n    </tr>\n    <tr>\n      <th>23572</th>\n      <td>10566880</td>\n      <td>The title character is an innocent housekeeper...</td>\n    </tr>\n    <tr>\n      <th>36215</th>\n      <td>14436640</td>\n      <td>Crystal Shackelford  lures two strangers, soli...</td>\n    </tr>\n    <tr>\n      <th>40770</th>\n      <td>7955522</td>\n      <td>The plot of the special differs significantly ...</td>\n    </tr>\n    <tr>\n      <th>2526</th>\n      <td>11014002</td>\n      <td>Plummer plays Fitz Wynn, a truly talented but ...</td>\n    </tr>\n    <tr>\n      <th>25944</th>\n      <td>4213599</td>\n      <td>Duke Frederick  has usurped and deposed his ol...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plots = pd.read_csv(\"data/MovieSummaries/plot_summaries.txt\", sep=\"\\t\", header=0, names=['wiki_id', 'plot_summaries'])\n",
+    "plots.sample(10)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<function spacy.pipeline.functions.merge_entities(doc: spacy.tokens.doc.Doc)>"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "nlp.add_pipe(\"merge_entities\") # Merge entities like ['David' 'Bowie'] to ['David Bowie']"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [],
+   "source": [
+    "def tag_adj(text):\n",
+    "    doc = nlp(text)\n",
+    "    noun_adj_pairs = []\n",
+    "    for token in doc:\n",
+    "        ## Is the word a proper noun / noun / pronoun\n",
+    "        if token.pos_ in ('PROPN', 'NOUN', 'PRON'):\n",
+    "            for child in token.children:\n",
+    "                ## Is the child an adjectival modifier\n",
+    "                if child.dep_ == 'amod':\n",
+    "                    noun_adj_pairs.append((token, child))\n",
+    "    return noun_adj_pairs"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[(card, red), (envelope, blue), (girl, beautiful)]"
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tag_adj(\"There is a red card in the blue envelope and a beautiful girl.\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[]"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tag_adj(\"She is beautiful.\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [],
+   "source": [
+    "def tag_verb(text):\n",
+    "    doc = nlp(text)\n",
+    "    verbs = []\n",
+    "    for possible_verb in doc:\n",
+    "        if possible_verb.pos_ == 'VERB':\n",
+    "            for possible_subject in possible_verb.children:\n",
+    "                if possible_subject.dep_ == 'nsubj':\n",
+    "                    verbs.append((possible_subject, possible_verb))\n",
+    "                    break\n",
+    "    return verbs"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[(nation, consists),\n (district, provide),\n (tributes, fight),\n (who, gave),\n (she, starving),\n (He, warns),\n (who, train),\n (Peeta, reveals),\n (sponsors, provide),\n (she, discovers),\n (Peeta, meant),\n (he, said),\n (Games, begin),\n (Katniss, survives),\n (Peeta, forms),\n (They, find),\n (Rue, draws),\n (Katniss, drops),\n (Rue, cares),\n (she, recovers),\n (alliance, gathered),\n (Katniss, draw),\n (Cato, kills),\n (Katniss, runs),\n (she, hears),\n (She, finds),\n (Rue, trapped),\n (Marvel, throws),\n (she, dodges),\n (it, stab),\n (Katniss, shoots),\n (She, comforts),\n (she, gathers),\n (it, sparks),\n (Games, turning),\n (change, avoid),\n (tributes, win),\n (She, portrays),\n (announcer, proclaims),\n (thing, needs),\n (Peeta, begs),\n (Katniss, promises),\n (he, falls),\n (she, heads),\n (Clove, ambushes),\n (Thresh, kills),\n (He, spares),\n (medicine, works),\n (Foxface, dies),\n (she, stole),\n (Crane, changes),\n (They, kill),\n (they, encounter),\n (Katniss, wounds),\n (Katniss, shoots),\n (Peeta, tells),\n (she, gives),\n (they, commit),\n (Haymitch, warns),\n (she, made),\n (Snow, considers)]"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tag_verb(plots.loc[0].plot_summaries)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[(Capitol, wealthy),\n (districts, poorer),\n (rebellion, past),\n (Hunger Games, annual),\n (survivor, sole),\n (Reaping, first),\n (Everdeen, 12-year-old),\n (sister, older),\n (tribute, other),\n (mentor, drunk),\n (Haymitch Abernathy, past),\n (academies, special),\n (Games, televised),\n (supplies, tempting),\n (alliance, uneasy),\n (tree, nearby),\n (nest, poisonous),\n (Rue, dying),\n (lovers, crossed),\n (riots, further),\n (district, same),\n (wound, infected),\n (tribute, other),\n (mobile, Peeta),\n (creatures, like),\n (death, prolonged),\n (Games, 74th),\n (enemies, powerful)]"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tag_adj(plots.loc[0].plot_summaries)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn [17], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m verb \u001B[38;5;241m=\u001B[39m pd\u001B[38;5;241m.\u001B[39mconcat([plots\u001B[38;5;241m.\u001B[39mcopy(), \u001B[43mplots\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mplot_summaries\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mapply\u001B[49m\u001B[43m(\u001B[49m\u001B[43mtag_verb\u001B[49m\u001B[43m)\u001B[49m], axis\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1\u001B[39m)\n\u001B[0;32m      2\u001B[0m verb\u001B[38;5;241m.\u001B[39mhead()\n",
+      "File \u001B[1;32mC:\\ProgramData\\Anaconda3\\envs\\py310\\lib\\site-packages\\pandas\\core\\series.py:4433\u001B[0m, in \u001B[0;36mSeries.apply\u001B[1;34m(self, func, convert_dtype, args, **kwargs)\u001B[0m\n\u001B[0;32m   4323\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mapply\u001B[39m(\n\u001B[0;32m   4324\u001B[0m     \u001B[38;5;28mself\u001B[39m,\n\u001B[0;32m   4325\u001B[0m     func: AggFuncType,\n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m   4328\u001B[0m     \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs,\n\u001B[0;32m   4329\u001B[0m ) \u001B[38;5;241m-\u001B[39m\u001B[38;5;241m>\u001B[39m DataFrame \u001B[38;5;241m|\u001B[39m Series:\n\u001B[0;32m   4330\u001B[0m     \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[0;32m   4331\u001B[0m \u001B[38;5;124;03m    Invoke function on values of Series.\u001B[39;00m\n\u001B[0;32m   4332\u001B[0m \n\u001B[1;32m   (...)\u001B[0m\n\u001B[0;32m   4431\u001B[0m \u001B[38;5;124;03m    dtype: float64\u001B[39;00m\n\u001B[0;32m   4432\u001B[0m \u001B[38;5;124;03m    \"\"\"\u001B[39;00m\n\u001B[1;32m-> 4433\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mSeriesApply\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mfunc\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mconvert_dtype\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mapply\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[1;32mC:\\ProgramData\\Anaconda3\\envs\\py310\\lib\\site-packages\\pandas\\core\\apply.py:1088\u001B[0m, in \u001B[0;36mSeriesApply.apply\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m   1084\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28misinstance\u001B[39m(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mf, \u001B[38;5;28mstr\u001B[39m):\n\u001B[0;32m   1085\u001B[0m     \u001B[38;5;66;03m# if we are a string, try to dispatch\u001B[39;00m\n\u001B[0;32m   1086\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mapply_str()\n\u001B[1;32m-> 1088\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mapply_standard\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[1;32mC:\\ProgramData\\Anaconda3\\envs\\py310\\lib\\site-packages\\pandas\\core\\apply.py:1143\u001B[0m, in \u001B[0;36mSeriesApply.apply_standard\u001B[1;34m(self)\u001B[0m\n\u001B[0;32m   1137\u001B[0m         values \u001B[38;5;241m=\u001B[39m obj\u001B[38;5;241m.\u001B[39mastype(\u001B[38;5;28mobject\u001B[39m)\u001B[38;5;241m.\u001B[39m_values\n\u001B[0;32m   1138\u001B[0m         \u001B[38;5;66;03m# error: Argument 2 to \"map_infer\" has incompatible type\u001B[39;00m\n\u001B[0;32m   1139\u001B[0m         \u001B[38;5;66;03m# \"Union[Callable[..., Any], str, List[Union[Callable[..., Any], str]],\u001B[39;00m\n\u001B[0;32m   1140\u001B[0m         \u001B[38;5;66;03m# Dict[Hashable, Union[Union[Callable[..., Any], str],\u001B[39;00m\n\u001B[0;32m   1141\u001B[0m         \u001B[38;5;66;03m# List[Union[Callable[..., Any], str]]]]]\"; expected\u001B[39;00m\n\u001B[0;32m   1142\u001B[0m         \u001B[38;5;66;03m# \"Callable[[Any], Any]\"\u001B[39;00m\n\u001B[1;32m-> 1143\u001B[0m         mapped \u001B[38;5;241m=\u001B[39m \u001B[43mlib\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mmap_infer\u001B[49m\u001B[43m(\u001B[49m\n\u001B[0;32m   1144\u001B[0m \u001B[43m            \u001B[49m\u001B[43mvalues\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m   1145\u001B[0m \u001B[43m            \u001B[49m\u001B[43mf\u001B[49m\u001B[43m,\u001B[49m\u001B[43m  \u001B[49m\u001B[38;5;66;43;03m# type: ignore[arg-type]\u001B[39;49;00m\n\u001B[0;32m   1146\u001B[0m \u001B[43m            \u001B[49m\u001B[43mconvert\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mconvert_dtype\u001B[49m\u001B[43m,\u001B[49m\n\u001B[0;32m   1147\u001B[0m \u001B[43m        \u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m   1149\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mlen\u001B[39m(mapped) \u001B[38;5;129;01mand\u001B[39;00m \u001B[38;5;28misinstance\u001B[39m(mapped[\u001B[38;5;241m0\u001B[39m], ABCSeries):\n\u001B[0;32m   1150\u001B[0m     \u001B[38;5;66;03m# GH#43986 Need to do list(mapped) in order to get treated as nested\u001B[39;00m\n\u001B[0;32m   1151\u001B[0m     \u001B[38;5;66;03m#  See also GH#25959 regarding EA support\u001B[39;00m\n\u001B[0;32m   1152\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m obj\u001B[38;5;241m.\u001B[39m_constructor_expanddim(\u001B[38;5;28mlist\u001B[39m(mapped), index\u001B[38;5;241m=\u001B[39mobj\u001B[38;5;241m.\u001B[39mindex)\n",
+      "File \u001B[1;32mC:\\ProgramData\\Anaconda3\\envs\\py310\\lib\\site-packages\\pandas\\_libs\\lib.pyx:2870\u001B[0m, in \u001B[0;36mpandas._libs.lib.map_infer\u001B[1;34m()\u001B[0m\n",
+      "Cell \u001B[1;32mIn [9], line 2\u001B[0m, in \u001B[0;36mtag_verb\u001B[1;34m(text)\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mtag_verb\u001B[39m(text):\n\u001B[1;32m----> 2\u001B[0m     doc \u001B[38;5;241m=\u001B[39m \u001B[43mnlp\u001B[49m\u001B[43m(\u001B[49m\u001B[43mtext\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      3\u001B[0m     verbs \u001B[38;5;241m=\u001B[39m []\n\u001B[0;32m      4\u001B[0m     \u001B[38;5;28;01mfor\u001B[39;00m possible_verb \u001B[38;5;129;01min\u001B[39;00m doc:\n",
+      "File \u001B[1;32mC:\\ProgramData\\Anaconda3\\envs\\py310\\lib\\site-packages\\spacy\\language.py:1020\u001B[0m, in \u001B[0;36mLanguage.__call__\u001B[1;34m(self, text, disable, component_cfg)\u001B[0m\n\u001B[0;32m   1018\u001B[0m     error_handler \u001B[38;5;241m=\u001B[39m proc\u001B[38;5;241m.\u001B[39mget_error_handler()\n\u001B[0;32m   1019\u001B[0m \u001B[38;5;28;01mtry\u001B[39;00m:\n\u001B[1;32m-> 1020\u001B[0m     doc \u001B[38;5;241m=\u001B[39m proc(doc, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mcomponent_cfg\u001B[38;5;241m.\u001B[39mget(name, {}))  \u001B[38;5;66;03m# type: ignore[call-arg]\u001B[39;00m\n\u001B[0;32m   1021\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m \u001B[38;5;167;01mKeyError\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m e:\n\u001B[0;32m   1022\u001B[0m     \u001B[38;5;66;03m# This typically happens if a component is not initialized\u001B[39;00m\n\u001B[0;32m   1023\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(Errors\u001B[38;5;241m.\u001B[39mE109\u001B[38;5;241m.\u001B[39mformat(name\u001B[38;5;241m=\u001B[39mname)) \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01me\u001B[39;00m\n",
+      "File \u001B[1;32mC:\\ProgramData\\Anaconda3\\envs\\py310\\lib\\site-packages\\spacy\\pipeline\\trainable_pipe.pyx:53\u001B[0m, in \u001B[0;36mspacy.pipeline.trainable_pipe.TrainablePipe.__call__\u001B[1;34m()\u001B[0m\n",
+      "File \u001B[1;32mC:\\ProgramData\\Anaconda3\\envs\\py310\\lib\\site-packages\\spacy\\pipeline\\transition_parser.pyx:326\u001B[0m, in \u001B[0;36mspacy.pipeline.transition_parser.Parser.set_annotations\u001B[1;34m()\u001B[0m\n",
+      "File \u001B[1;32mC:\\ProgramData\\Anaconda3\\envs\\py310\\lib\\site-packages\\spacy\\pipeline\\_parser_internals\\ner.pyx:271\u001B[0m, in \u001B[0;36mspacy.pipeline._parser_internals.ner.BiluoPushDown.set_annotations\u001B[1;34m()\u001B[0m\n",
+      "File \u001B[1;32mC:\\ProgramData\\Anaconda3\\envs\\py310\\lib\\site-packages\\spacy\\tokens\\doc.pyx:777\u001B[0m, in \u001B[0;36mspacy.tokens.doc.Doc.set_ents\u001B[1;34m()\u001B[0m\n",
+      "File \u001B[1;32mC:\\ProgramData\\Anaconda3\\envs\\py310\\lib\\site-packages\\spacy\\tokens\\doc.pyx:105\u001B[0m, in \u001B[0;36mspacy.tokens.doc.SetEntsDefault.values\u001B[1;34m()\u001B[0m\n",
+      "File \u001B[1;32mC:\\ProgramData\\Anaconda3\\envs\\py310\\lib\\enum.py:451\u001B[0m, in \u001B[0;36mEnumMeta.__members__\u001B[1;34m(cls)\u001B[0m\n\u001B[0;32m    448\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21m__len__\u001B[39m(\u001B[38;5;28mcls\u001B[39m):\n\u001B[0;32m    449\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28mlen\u001B[39m(\u001B[38;5;28mcls\u001B[39m\u001B[38;5;241m.\u001B[39m_member_names_)\n\u001B[1;32m--> 451\u001B[0m \u001B[38;5;129m@property\u001B[39m\n\u001B[0;32m    452\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21m__members__\u001B[39m(\u001B[38;5;28mcls\u001B[39m):\n\u001B[0;32m    453\u001B[0m     \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[0;32m    454\u001B[0m \u001B[38;5;124;03m    Returns a mapping of member name->value.\u001B[39;00m\n\u001B[0;32m    455\u001B[0m \n\u001B[0;32m    456\u001B[0m \u001B[38;5;124;03m    This mapping lists all enum members, including aliases. Note that this\u001B[39;00m\n\u001B[0;32m    457\u001B[0m \u001B[38;5;124;03m    is a read-only view of the internal mapping.\u001B[39;00m\n\u001B[0;32m    458\u001B[0m \u001B[38;5;124;03m    \"\"\"\u001B[39;00m\n\u001B[0;32m    459\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m MappingProxyType(\u001B[38;5;28mcls\u001B[39m\u001B[38;5;241m.\u001B[39m_member_map_)\n",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "verb = pd.concat([plots.copy(), plots.plot_summaries.apply(tag_verb)], axis=1)\n",
+    "verb.head()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "adj = pd.concat([plots.copy(), plots.plot_summaries.apply(tag_adj)], axis=1)\n",
+    "adj.head()"
    ],
    "metadata": {
     "collapsed": false
