--- a/milestone_2.ipynb
+++ b/milestone_2.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 1,
    "id": "13f852a3-92cc-4d40-bd61-aab122583eeb",
    "metadata": {},
    "outputs": [],
@@ -931,14 +931,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "writers.to_pickle(\"data/writers.pickle\")\n",
+    "directors.to_pickle(\"data/directors.pickle\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [],
+   "source": [
+    "directors = pd.read_pickle(\"data/directors.pickle\")\n",
+    "writers = pd.read_pickle(\"data/writers.pickle\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
-      "text/plain": "                            title            director_name gender\n301                As You Like It       J. Stuart Blackton      M\n183721       Thirteen Reasons Why            Michael Sucsy      M\n101183       The Killer Inside Me               Jesse Vint      M\n44053               The Believers             Paul Wendkos      M\n160971                      Click              Phil Traill      M\n47894                Los Tarantos  Francisco Rovira Beleta      M\n274816        The Tell-Tale Heart          Fred Jensen III      M\n96416   Sabrina the Teenage Witch           David Grossman      M\n213874                    Ophelia     Rafael Hernán Gamboa      M\n95893               Home and Away               Sam Atwell      M",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>title</th>\n      <th>director_name</th>\n      <th>gender</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>301</th>\n      <td>As You Like It</td>\n      <td>J. Stuart Blackton</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>183721</th>\n      <td>Thirteen Reasons Why</td>\n      <td>Michael Sucsy</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>101183</th>\n      <td>The Killer Inside Me</td>\n      <td>Jesse Vint</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>44053</th>\n      <td>The Believers</td>\n      <td>Paul Wendkos</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>160971</th>\n      <td>Click</td>\n      <td>Phil Traill</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>47894</th>\n      <td>Los Tarantos</td>\n      <td>Francisco Rovira Beleta</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>274816</th>\n      <td>The Tell-Tale Heart</td>\n      <td>Fred Jensen III</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>96416</th>\n      <td>Sabrina the Teenage Witch</td>\n      <td>David Grossman</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>213874</th>\n      <td>Ophelia</td>\n      <td>Rafael Hernán Gamboa</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>95893</th>\n      <td>Home and Away</td>\n      <td>Sam Atwell</td>\n      <td>M</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                                title      director_name gender\n37057            The Petrified Forest       Delbert Mann      M\n190704  Noah's Ark: The New Beginning      John Stronach      M\n302704                    The Warning         David Horn      M\n316435                     No Kidding  Charles Fernandes      M\n71932                Curse of Bigfoot       Dave Flocker      M\n132957                Train of Events      Robin Midgley      M\n205508                       Surprise     Marqueta Smith      M\n199144               Work In Progress           Dan Pfau      M\n188136             An Inspector Calls      Dominic Allan      M\n172895                     Dear Diary      Barrett Blade      M",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>title</th>\n      <th>director_name</th>\n      <th>gender</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>37057</th>\n      <td>The Petrified Forest</td>\n      <td>Delbert Mann</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>190704</th>\n      <td>Noah's Ark: The New Beginning</td>\n      <td>John Stronach</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>302704</th>\n      <td>The Warning</td>\n      <td>David Horn</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>316435</th>\n      <td>No Kidding</td>\n      <td>Charles Fernandes</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>71932</th>\n      <td>Curse of Bigfoot</td>\n      <td>Dave Flocker</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>132957</th>\n      <td>Train of Events</td>\n      <td>Robin Midgley</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>205508</th>\n      <td>Surprise</td>\n      <td>Marqueta Smith</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>199144</th>\n      <td>Work In Progress</td>\n      <td>Dan Pfau</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>188136</th>\n      <td>An Inspector Calls</td>\n      <td>Dominic Allan</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>172895</th>\n      <td>Dear Diary</td>\n      <td>Barrett Blade</td>\n      <td>M</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 145,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,44 +976,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
-      "text/plain": "                      title               writer_name gender\n40015             Gunga Din          William Faulkner      M\n427755       Dinner for One           Cheryl Holloway      F\n340644             Collapse            Javier Barbera      M\n434655             The Code            Alan Tregoning      M\n443870                 Aida            Giuseppe Verdi      M\n451474                  Beg  Damien Michael Belliveau      M\n488671            Constance              Bobby Knauff      M\n212075    Under the Volcano         Andrew Piddington      M\n321006         Crazy Eights               Dan De Luca      M\n309764  Unfinished Business              David Foster      M",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>title</th>\n      <th>writer_name</th>\n      <th>gender</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>40015</th>\n      <td>Gunga Din</td>\n      <td>William Faulkner</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>427755</th>\n      <td>Dinner for One</td>\n      <td>Cheryl Holloway</td>\n      <td>F</td>\n    </tr>\n    <tr>\n      <th>340644</th>\n      <td>Collapse</td>\n      <td>Javier Barbera</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>434655</th>\n      <td>The Code</td>\n      <td>Alan Tregoning</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>443870</th>\n      <td>Aida</td>\n      <td>Giuseppe Verdi</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>451474</th>\n      <td>Beg</td>\n      <td>Damien Michael Belliveau</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>488671</th>\n      <td>Constance</td>\n      <td>Bobby Knauff</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>212075</th>\n      <td>Under the Volcano</td>\n      <td>Andrew Piddington</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>321006</th>\n      <td>Crazy Eights</td>\n      <td>Dan De Luca</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>309764</th>\n      <td>Unfinished Business</td>\n      <td>David Foster</td>\n      <td>M</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                        title       writer_name gender\n218557              Big Shots      Jason Gelles      M\n494763             The Bridge    Petr Levchenko      M\n149811                 Family   Elizabeth Clark      F\n388701              Aftermath         Brian Kim      M\n194071                Odds On    John Hugginson      M\n125067  Jack the Giant Killer  Johnnie Mortimer      M\n117477      This Filthy World       John Waters      M\n107939               The Ring      Dale McRaven      M\n376324              Chrysalis   Tony Baez Milan      M\n505354        King of Thieves   Duncan Campbell      M",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>title</th>\n      <th>writer_name</th>\n      <th>gender</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>218557</th>\n      <td>Big Shots</td>\n      <td>Jason Gelles</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>494763</th>\n      <td>The Bridge</td>\n      <td>Petr Levchenko</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>149811</th>\n      <td>Family</td>\n      <td>Elizabeth Clark</td>\n      <td>F</td>\n    </tr>\n    <tr>\n      <th>388701</th>\n      <td>Aftermath</td>\n      <td>Brian Kim</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>194071</th>\n      <td>Odds On</td>\n      <td>John Hugginson</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>125067</th>\n      <td>Jack the Giant Killer</td>\n      <td>Johnnie Mortimer</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>117477</th>\n      <td>This Filthy World</td>\n      <td>John Waters</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>107939</th>\n      <td>The Ring</td>\n      <td>Dale McRaven</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>376324</th>\n      <td>Chrysalis</td>\n      <td>Tony Baez Milan</td>\n      <td>M</td>\n    </tr>\n    <tr>\n      <th>505354</th>\n      <td>King of Thieves</td>\n      <td>Duncan Campbell</td>\n      <td>M</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 146,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "writers.sample(10)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 147,
-   "outputs": [],
-   "source": [
-    "writers.to_pickle(\"data/writers\")\n",
-    "directors.to_pickle(\"data/directors\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 148,
-   "outputs": [],
-   "source": [
-    "directors = pd.read_pickle(\"data/directors\")\n",
-    "writers = pd.read_pickle(\"data/writers\")"
    ],
    "metadata": {
     "collapsed": false
