--- a/milestone_2.ipynb
+++ b/milestone_2.ipynb
@@ -912,18 +912,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Numbers of names that are of both genders : 365\n"
+      "Numbers of names that are of neutral genders: 365\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Numbers of names that are of both genders : {len(neutral_gender_names)}\")"
+    "print(f\"Numbers of names that are of neutral genders: {len(neutral_gender_names)}\")"
    ],
    "metadata": {
     "collapsed": false
